Poc with iframe

--- a/app-config.local.yaml
+++ b/app-config.local.yaml
@@ -22,9 +22,11 @@ backend:
     # Content-Security-Policy directives follow the Helmet format: https://helmetjs.github.io/#reference
     # Default Helmet Content-Security-Policy values can be removed by setting the key to false
   cors:
-    origin: http://localhost:3000
+    origin: 
+      - http://localhost:3000
+      - https://localhost:10443
     methods: [GET, HEAD, PATCH, POST, PUT, DELETE]
-    credentials: true
+    credentials: false
   # This is for local development only, it is not recommended to use this in production
   # The production database configuration is stored in app-config.production.yaml
   database:
@@ -115,3 +117,9 @@ permission:
 kubernetesDashboard:
   url: ${K8S_DASHBOARD_URL}
   token: ${K8S_DASHBOARD_TOKEN}
+
+# Define la visibilidad para los parámetros
+visibility:
+  kubernetesDashboard:
+    url: frontend
+    token: frontend
